infrastructure/networking/cilium/policies/harbor-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: harbor-egress
  namespace: harbor
spec:
  endpointSelector:
    matchLabels:
      app: harbor
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cloudnative-pg
            cnpg.io/cluster: harbor-database
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
    - toEntities:
        - world
